# simple-chat-app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.dev.txt  requirements.txt
simple-chat-app/: main.py
simple-chat-app/chat/: __init__.py  dao.py  models.py  router.py  schemas.py
simple-chat-app/config/: __init__.py  config.py
simple-chat-app/database/: __init__.py  dao.py  database.py
simple-chat-app/database/migration/: env.py
simple-chat-app/database/migration/versions/: 801405094592_initial_revision.py
simple-chat-app/static/js/: auth.js  chat.js
simple-chat-app/static/styles/: chat.css
simple-chat-app/templates/: auth.html  chat.html
simple-chat-app/user/: __init__.py  auth.py  dao.py  exceptions.py  jwt.py  models.py  router.py  schemas.py
