[tool.poetry]
name = "simple-chat-app"
version = "0.1.0"
description = "Simple Chat App written in Python"
authors = ["FranChesK0"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
bcrypt = "^4.2.0"
fastapi = "^0.115.0"
jinja2 = "^3.1.4"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.1"
websockets = "^13.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^4.0.1"


[tool.black]
line-length = 90
target-version = ["py312"]

[tool.flake8]
max-line-length = 90
count = true

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["project_name", "tests"]
extend_skip = ["__init__.py"]

[tool.mypy]
mypy_path = "project_name"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
